--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,7 +80,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    Copyright &copy; {{ site.title }} {{site.createTime}} - {{ site.time | date: '%Y' }}
                     <br>
                     Created by <a href="http://github.com/ShenBao">ShenBao</a> |
                     <iframe
