--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,6 +110,7 @@
         }
 })(window,document);
 
+//删除多说 木木正在使用多数
 var jQueryRemovedsPoweredBy = setInterval(function(){
     if($('.ds-powered-by').size != 0){
         $('.ds-powered-by').remove();
