修改 扩展 extend bugs

--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -172,6 +172,8 @@ layout: default
                 </ul>
                 {% endif %}
 
+                <h5>EXTENDS</h5>
+                
                 <!-- extend -->
                 {% if site.extends %}
                 <hr>
