add extends in post.html page.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -182,6 +182,18 @@ layout: default
                     {% endfor %}
                 </ul>
                 {% endif %}
+
+                <!-- Extends -->
+                {% if site.extends %}
+                <hr>
+                <h5>EXTENDS</h5>
+                <ul class="list-inline">
+                    {% for extend in site.extends %}
+                        <li><a href="{{extend.href}}">{{extend.title}}</a></li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+
             </div>
         </div>
     </div>
