--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -59,6 +59,18 @@ layout: default
                     {% endfor %}
                 </ul>
                 {% endif %}
+
+                <!-- Extends -->
+                {% if site.extends %}
+                <hr>
+                <h5>EXTENDS</h5>
+                <ul class="list-inline">
+                    {% for extend in site.extends %}
+                        <li><a href="{{extend.href}}">{{extend.title}}</a></li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+
             </div>
         {% else %}
 
@@ -193,6 +205,18 @@ layout: default
                     {% endfor %}
                 </ul>
                 {% endif %}
+
+                <!-- Extends -->
+                {% if site.extends %}
+                <hr>
+                <h5>EXTENDS</h5>
+                <ul class="list-inline">
+                    {% for extend in site.extends %}
+                        <li><a href="{{extend.href}}">{{extend.title}}</a></li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+                
     		</div>
         {% endif %}
 	</div>
