--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
   });
 });
 </script>
+<!--小星星-->
 <script type="text/javascript">
     (function(window,document,undefined){
         var hearts = [];
