layout css height:150px

--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -167,10 +167,21 @@ layout: default
                 <h5>FRIENDS</h5>
                 <ul class="list-inline">
                     {% for friend in site.friends %}
-                        <li><a href="{{friend.href}}">{{friend.title}}</a></li>
+                        <li><a href="{{friend.href}}">{{friend.title}} 7  </a></li>
                     {% endfor %}
                 </ul>
                 {% endif %}
+
+                <!-- Friends Blog -->
+                <!--{% if site.exteds %}
+                <hr>
+                <h5>exteds</h5>
+                <ul class="list-inline">
+                    {% for exted in site.exteds %}
+                        <li><a href="{{exted.href}}">{{exted.title}}</a></li>
+                    {% endfor %}
+                </ul>
+                {% endif %}-->
             </div>
         </div>
     </div>
