--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,11 +25,11 @@
 					<li>
                         <a href="{{ site.BASE_PATH}}/{{ site.archive_path }}/">Archives</a>
                     </li>
+                    <li>
+                        <a href="{{ site.BASE_PATH}}/{{ site.categories_path }}/">Categories</a>
+                    </li>
 					<li>
                         <a href="{{ site.BASE_PATH}}/{{ site.about_path }}">About Me</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/shenbao">GitHub</a>
                     </li>
                 </ul>
             </div>
