.intro-header linear-gradient and bg-img-hide

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,9 @@ layout: default
 <style type="text/css">
     header.intro-header{
         position: relative;
-        background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')
+        {% if page.header-img %}
+        background-image: url('{{ site.baseurl }}/{{ page.header-img }}')
+        {% endif %}
     }
 
     {% if page.header-mask %}
