.intro-header background-color: gray;

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,7 @@ layout: default
 <style type="text/css">
     header.intro-header{
         position: relative;
+        background-color: gray;
         {% if page.header-img %}
         background-image: url('{{ site.baseurl }}/{{ page.header-img }}')
         {% endif %}
