--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,6 +31,9 @@
 					<li>
                         <a href="{{ site.BASE_PATH}}/{{ site.about_path }}">About Me</a>
                     </li>
+                    <li>
+                        <a href="https://github.com/shenbao">github</a>
+                    </li>
                 </ul>
             </div>
         </div>
