--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,6 +62,14 @@ layout: default
                 post-container">
 
 				{{ content }}
+                
+                <br/>
+                <h5>
+                    【 THE END 】
+                </h5>
+                <p>
+                    -------- {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}
+                </p>
 
                 <hr style="visibility: hidden;">
 
