--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,9 +64,9 @@ layout: default
 				{{ content }}
                 
                 <br/>
-                <h5>
-                    【 THE END 】
-                </h5>
+                <p>
+                    <b>【 THE END 】</b>
+                </p>
                 <p>
                     -------- {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}
                 </p>
