about github and fork me on github

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,9 @@
+<!--forkgithub-->
+<div class="forkgithub">
+    <a target="_blank" href="https://github.com/ShenBao">
+    </a>
+</div>
+<!--end forkgithub-->
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container-fluid">
@@ -31,7 +37,7 @@
 					<li>
                         <a href="{{ site.BASE_PATH}}/{{ site.about_path }}">About Me</a>
                     </li>
-                    <li>
+                    <li class="gotogithub">
                         <a href="https://github.com/shenbao">github</a>
                     </li>
                 </ul>
