add footer.html zhuanzaishuoming and by hux

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -88,6 +88,14 @@
                         frameborder="0" scrolling="0" width="100px" height="20px"
                         src="https://ghbtns.com/github-btn.html?user=ShenBao&repo=ShenBao.github.io&type=star&count=true" >
                     </iframe>
+                    <br/>
+                    <span class="label label-primary label-md">
+                        <strong>
+                            转载请标明作者和出处
+                        </strong>
+                    </span>
+                    <br/>
+                    Theme by <a href="http://huangxuan.me">Hux</a>
                 </p>
             </div>
         </div>
