add by hux color:#000

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,7 +95,7 @@
                         </strong>
                     </span>
                     <br/>
-                    Theme by <a href="http://huangxuan.me">Hux</a>
+                    Theme by <a href="http://huangxuan.me" class="cloor-000">Hux</a>
                 </p>
             </div>
         </div>
