--- a/css/blog.css
+++ b/css/blog.css
@@ -1216,3 +1216,6 @@ legend,.raqu,.color-0085a1{
     vertical-align: baseline;
     border-radius: .25em;
 }
+.cloor-000{
+  color: #000 !important;
+}
