add by hux font-size: 10px

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,7 +95,9 @@
                         </strong>
                     </span>
                     <br/>
-                    Theme by <a href="http://huangxuan.me" class="cloor-000">Hux</a>
+                    <span class="font-size-10">
+                        Theme by <a href="http://huangxuan.me" class="cloor-000">Hux</a>
+                    </span>
                 </p>
             </div>
         </div>
