add <div class="progress-indicator" style="width: 19.6388%;"></div>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -104,6 +104,9 @@
     </div>
 </footer>
 
+<div class="progress-indicator" style="width: 19.6388%;"></div>
+
+
 <!-- jQuery -->
 <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
 
@@ -267,3 +270,24 @@
 </script>
 {% endif %}
 
+
+// 顶部进度条
+<script>
+    (function() {
+      var $w = $(window);
+      var $prog2 = $('.progress-indicator');
+      var wh = $w.height();
+      var h = $('body').height();
+      var sHeight = h - wh;
+      $w.on('scroll', function() {
+        window.requestAnimationFrame(function(){
+          var perc = Math.max(0, Math.min(1, $w.scrollTop() / sHeight));
+          updateProgress(perc);
+        });
+      });
+
+      function updateProgress(perc) {
+        $prog2.css({width: perc * 100 + '%'});
+      }
+    }());
+</script>
