--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -271,8 +271,8 @@
 {% endif %}
 
 
-// 顶部进度条
 <script>
+    /* 顶部进度条 */
     (function() {
       var $w = $(window);
       var $prog2 = $('.progress-indicator');
