--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -116,6 +116,9 @@
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/blog.min.js " | prepend: site.baseurl }}"></script>
 
+<!-- Click Heart -->
+<script src="{{ "/js/heart.js " | prepend: site.baseurl }}"></script>
+
 <!-- Service Worker -->
 {% if site.service-worker %}
 <script type="text/javascript">
