add canvas-nest.min.js and delete duoshuoJsCode

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -119,6 +119,9 @@
 <!-- Click Heart -->
 <script src="{{ "/js/heart.js " | prepend: site.baseurl }}"></script>
 
+<!-- jscanvas-nest -->
+<script src="{{ "/js/canvas-nest.min.js " | prepend: site.baseurl }}"></script>
+
 <!-- Service Worker -->
 {% if site.service-worker %}
 <script type="text/javascript">
