--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -214,9 +214,9 @@ layout: default
 </article>
 
 
-{% if site.duoshuo_username %}
+<!--{% if site.duoshuo_username %}-->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
+<!--<script type="text/javascript">
     // dynamic User by Hux
     var _user = '{{site.duoshuo_username}}';
 
@@ -230,9 +230,9 @@ layout: default
         (document.getElementsByTagName('head')[0]
          || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
-</script>
+</script>-->
 <!-- 多说公共JS代码 end -->
-{% endif %}
+<!--{% endif %}-->
 
 
 {% if site.disqus_username %}
