--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -210,9 +210,9 @@ layout: default
     resize();
 </script>
 
-{% if site.duoshuo_username %}
+<!--{% if site.duoshuo_username %}
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
+<!--<script type="text/javascript">
     // dynamic User by Hux
     var _user = '{{site.duoshuo_username}}';
 
@@ -226,9 +226,9 @@ layout: default
         (document.getElementsByTagName('head')[0]
          || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
-</script>
+</script>-->
 <!-- 多说公共JS代码 end -->
-{% endif %}
+<!--{% endif %}-->-->
 
 
 {% if site.disqus_username %}
