--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -120,7 +120,7 @@
 <script src="{{ "/js/heart.js " | prepend: site.baseurl }}"></script>
 
 <!-- jscanvas-nest -->
-<script src="{{ "/js/canvas-nest.min.js " | prepend: site.baseurl }}"></script>
+<script color="0,0,255" opacity='0.7' zIndex="-2" count="99" src="{{ "/js/canvas-nest.min.js " | prepend: site.baseurl }}"></script>
 
 <!-- Service Worker -->
 {% if site.service-worker %}
