--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -144,6 +144,9 @@ layout: default
                 <!-- disqus 评论框 end -->
                 {% endif %}
 
+                <!--hypercomments 评论-->
+                <div id="hypercomments_widget"></div>
+                <!--hypercomments end-->
             </div>  
 
     <!-- Side Catalog Container -->
@@ -252,6 +255,22 @@ layout: default
 <!-- disqus 公共JS代码 end -->
 {% endif %}
 
+<!--hypercomments 评论-->
+<script type="text/javascript">
+_hcwp = window._hcwp || [];
+_hcwp.push({widget:"Stream", widget_id: 91931});
+(function() {
+if("HC_LOAD_INIT" in window)return;
+HC_LOAD_INIT = true;
+var lang = (navigator.language || navigator.systemLanguage || navigator.userLanguage || "en").substr(0, 2).toLowerCase();
+var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
+hcc.src = ("https:" == document.location.protocol ? "https" : "http")+"://w.hypercomments.com/widget/hc/91931/"+lang+"/widget.js";
+var s = document.getElementsByTagName("script")[0];
+s.parentNode.insertBefore(hcc, s.nextSibling);
+})();
+</script>
+<a href="http://hypercomments.com" rel = "nofollow" class="hc-link" title="comments widget">comments powered by HyperComments</a>
+<!--End hypercomments 评论-->
 
 {% if site.anchorjs %}
 <!-- async load function -->
