--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -119,8 +119,6 @@
 <!-- Click Heart -->
 <script src="{{ "/js/heart.js " | prepend: site.baseurl }}"></script>
 
-<!-- jscanvas-nest -->
-<script color="0,0,255" opacity='0.7' zIndex="-2" count="99" src="{{ "/js/canvas-nest.min.js " | prepend: site.baseurl }}"></script>
 
 <!-- Service Worker -->
 {% if site.service-worker %}
@@ -295,4 +293,20 @@
         $prog2.css({width: perc * 100 + '%'});
       }
     }());
+</script>
+
+<!-- jscanvas-nest -->
+<script>
+    function IsPC(){  
+            var userAgentInfo = navigator.userAgent;  
+            var Agents = new Array("Android", "iPhone", "SymbianOS", "Windows Phone", "iPad", "iPod");  
+            var flag = true;  
+            for (var v = 0; v < Agents.length; v++) {  
+                if (userAgentInfo.indexOf(Agents[v]) > 0) { flag = false; break; }  
+            }  
+            return flag;  
+    } 
+    if(IsPC){
+        $('body').append('<script color="0,0,255" opacity="0.7" zindex="-2" count="99" src="/js/canvas-nest.min.js "></scr'+'ipt>'); 
+    }
 </script>
