--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -297,16 +297,7 @@
 
 <!-- jscanvas-nest -->
 <script>
-    function IsPC(){  
-            var userAgentInfo = navigator.userAgent;  
-            var Agents = new Array("Android", "iPhone", "SymbianOS", "Windows Phone", "iPad", "iPod");  
-            var flag = true;  
-            for (var v = 0; v < Agents.length; v++) {  
-                if (userAgentInfo.indexOf(Agents[v]) > 0) { flag = false; break; }  
-            }  
-            return flag;  
-    } 
-    if(IsPC){
+    if(!(navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))){
         $('body').append('<script color="0,0,255" opacity="0.7" zindex="-2" count="99" src="/js/canvas-nest.min.js "></scr'+'ipt>'); 
     }
 </script>
