--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,6 +36,9 @@
                     <li>
                         <a href="{{ site.BASE_PATH}}/{{ site.categories_path }}/">Categories</a>
                     </li>
+                    <li>
+                        <a href="{{ site.BASE_PATH}}/{{ site.search_path }}/">Search</a>
+                    </li>
 					<li>
                         <a href="{{ site.BASE_PATH}}/{{ site.about_path }}">About Me</a>
                     </li>
