--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,7 +40,7 @@
                         <a href="{{ site.BASE_PATH}}/{{ site.search_path }}/">Search</a>
                     </li>
 					<li>
-                        <a href="{{ site.BASE_PATH}}/{{ site.about_path }}">About Me</a>
+                        <a href="{{ site.BASE_PATH}}/{{ site.about_path }}/">About</a>
                     </li>
                     {% if site.github_username %}
                     <li class="gotogithub">
