update about/jjc live

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
 
   <main class="site-main" aria-label="main-content">
     <div class="wrapper">
+      
+      {% include notice.html %}
+
       {{ content }}
     </div>
   </main>
