feat: 更新配置及优化文件

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
 
     <div class="copyright-content">
         <p>
-            Copyright {{ site.creat_time }} © {{ site.site_url }}
+            Copyright {{ site.by_time }} © {{ site.site_url }}
         </p>
         <p>
             Author Email:
