--- a/_includes/tollbar.html
+++ b/_includes/tollbar.html
@@ -1,13 +1,12 @@
 <!-- 顶部进度条 -->
 <div class="site-progress-indicator" id="progress-indicator" style="width: 0%;"></div>
 
-
 <ul class="site-tool-bar">
     {% if page.is-show-edit == false %}
     <span></span>
     {% else %}
     <li>
-        <a href="https://github.com/ShenBao{{ site.baseurl}}/blob/master/{{ page.path }}" target="_block">
+        <a href="https://github.com/ShenBao/{{ site.github_repo}}/blob/master/{{ page.path }}" target="_block">
             <i class="icon iconfont icon-icon-"></i>
             <span>编辑</span>
         </a>
@@ -19,7 +18,6 @@
             <span>反馈</span>
         </a>
     </li>
-    
 </ul>
 
 <div class="site-back-top" id="site-back-top">
